force-app/main/default/objects/Appointment__c/Appointment__c.object-meta.xml
<CustomObject>
    <description>This Objects exclusive purpose is the tracking of appointments created by advisors. It is not shown to them, nor does it affect anything. Events that they create through the &quot;Appointment&quot; button, are automatically deleted when a new one is created on the lead. 
When an event is created by an advisor, an identical Appointment Record is created.</description>
    <label>Appointment</label>
    <nameField>
        <label>Appointment Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Appointments</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>