force-app/main/default/objects/Appointment__c/fields/Appointment_Category__c.field-meta.xml
<CustomField>
    <fullName>Appointment_Category__c</fullName>
    <description>Used to differentiate and assign categories to Appointment Type. Mainly used for reporting</description>
    <formula>IF(
  CONTAINS(
    LOWER(Subject__c), &quot;calendly&quot;
  ),
  &quot;Booked via Calendly&quot;,
  IF(
    CONTAINS(
      LOWER(Subject__c), &quot;call with&quot;
    ),
    &quot;Booked by Advisor&quot;,
    &quot;Other&quot;
  )
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Appointment Category</label>
    <type>Text</type>
</CustomField>