force-app/main/default/objects/Appointment__c/fields/Appointment_Completed__c.field-meta.xml
<CustomField>
    <fullName>Appointment_Completed__c</fullName>
    <formula>Start__c &lt; NOW()</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Appointment Completed</label>
    <type>Checkbox</type>
</CustomField>