force-app/main/default/objects/Appointment__c/fields/Appointment_Currency__c.field-meta.xml
<CustomField>
    <fullName>Appointment_Currency__c</fullName>
    <label>Appointment Currency</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>