force-app/main/default/objects/Appointment__c/fields/Appointment_Rescheduled__c.field-meta.xml
<CustomField>
    <fullName>Appointment_Rescheduled__c</fullName>
    <formula>AND(
    DATEVALUE(CreatedDate) = TODAY(),
    LastModifiedDate &gt; CreatedDate
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Appointment Rescheduled</label>
    <type>Checkbox</type>
</CustomField>