force-app/main/default/objects/Appointment__c/fields/Booked_by_Internal_Meeting_Booker__c.field-meta.xml
<CustomField>
    <fullName>Booked_by_Internal_Meeting_Booker__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Booked by Internal Meeting Booker</label>
    <type>Checkbox</type>
</CustomField>