force-app/main/default/objects/Appointment__c/fields/Booked_Today__c.field-meta.xml
<CustomField>
    <fullName>Booked_Today__c</fullName>
    <description>Used to calculate diff. between Created Appointments Today and those Scheduled for Today from another Date</description>
    <formula>IF(DATEVALUE(CreatedDate) = TODAY(), 1, 0)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Booked Today</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>