force-app/main/default/objects/Appointment__c/fields/Calendly_Created__c.field-meta.xml
<CustomField>
    <fullName>Calendly_Created__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Calendly Created</label>
    <type>Checkbox</type>
</CustomField>