force-app/main/default/objects/Appointment__c/fields/Calendly_Event_Name__c.field-meta.xml
<CustomField>
    <fullName>Calendly_Event_Name__c</fullName>
    <label>Calendly Event Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>