force-app/main/default/objects/Appointment__c/fields/Calendly_Event_Slug__c.field-meta.xml
<CustomField>
    <fullName>Calendly_Event_Slug__c</fullName>
    <label>Calendly Event Slug</label>
    <length>255</length>
    <type>Text</type>
</CustomField>