force-app/main/default/objects/Appointment__c/fields/Calendly_Event_Type__c.field-meta.xml
<CustomField>
    <fullName>Calendly_Event_Type__c</fullName>
    <label>Calendly Event Type</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Round Robin</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>