force-app/main/default/objects/Appointment__c/fields/Calendly_Lecture_Meeting_Time__c.field-meta.xml
<CustomField>
    <fullName>Calendly_Lecture_Meeting_Time__c</fullName>
    <label>Calendly Lecture Meeting Time</label>
    <type>DateTime</type>
</CustomField>