force-app/main/default/objects/Appointment__c/fields/Call_Campaign_ID__c.field-meta.xml
<CustomField>
    <fullName>Call_Campaign_ID__c</fullName>
    <label>Call Campaign ID</label>
    <length>18</length>
    <type>Text</type>
</CustomField>