force-app/main/default/objects/Appointment__c/fields/Event_Deleted__c.field-meta.xml
<CustomField>
    <fullName>Event_Deleted__c</fullName>
    <formula>NOT(ISBLANK(Event_Deleted_Time_Stamp__c))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Event Deleted</label>
    <type>Checkbox</type>
</CustomField>