force-app/main/default/objects/Appointment__c/fields/Event_Deleted_Time_Stamp__c.field-meta.xml
<CustomField>
    <fullName>Event_Deleted_Time_Stamp__c</fullName>
    <label>Event Deleted Time Stamp</label>
    <type>DateTime</type>
</CustomField>