force-app/main/default/objects/Appointment__c/fields/Event_SFID__c.field-meta.xml
<CustomField>
    <fullName>Event_SFID__c</fullName>
    <description>This field holds the Salesforce Record ID of the Event, that it is related to.</description>
    <label>Event SFID</label>
    <length>18</length>
    <type>Text</type>
</CustomField>