force-app/main/default/objects/Appointment__c/fields/Lead_group__c.field-meta.xml
<CustomField>
    <fullName>Lead_group__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Lead group</label>
    <referenceTo>telegenta__Lead_group__c</referenceTo>
    <relationshipLabel>Appointments</relationshipLabel>
    <relationshipName>Appointments</relationshipName>
    <type>Lookup</type>
</CustomField>