force-app/main/default/objects/Appointment__c/fields/Marketing_Meeting__c.field-meta.xml
<CustomField>
    <fullName>Marketing_Meeting__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Marketing Meeting</label>
    <type>Checkbox</type>
</CustomField>