force-app/main/default/objects/Appointment__c/fields/Meeting_Booked_Today__c.field-meta.xml
<CustomField>
    <fullName>Meeting_Booked_Today__c</fullName>
    <description>To calculate Diff, btw Appointments Booked today and those scheduled for today from another date</description>
    <formula>DATEVALUE( CreatedDate ) = TODAY()</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Meeting Booked Today</label>
    <type>Checkbox</type>
</CustomField>