force-app/main/default/objects/Appointment__c/fields/Meeting_Subtype__c.field-meta.xml
<CustomField>
    <fullName>Meeting_Subtype__c</fullName>
    <label>Meeting Subtype</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Gratis rådgivning</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>