force-app/main/default/objects/Appointment__c/fields/Meeting_Type__c.field-meta.xml
<CustomField>
    <fullName>Meeting_Type__c</fullName>
    <label>Meeting Type</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Website booking</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>