force-app/main/default/objects/Appointment__c/fields/Process_Time__c.field-meta.xml
<CustomField>
    <fullName>Process_Time__c</fullName>
    <label>Process Time</label>
    <type>DateTime</type>
</CustomField>