force-app/main/default/objects/Appointment__c/fields/Rating__c.field-meta.xml
<CustomField>
    <fullName>Rating__c</fullName>
    <label>Rating</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Ring igen</fullName>
            </value>
            <value>
                <fullName>Booked at Lecture</fullName>
            </value>
            <value>
                <fullName>Fællesmøde</fullName>
            </value>
            <value>
                <fullName>Ja/Nej</fullName>
            </value>
            <value>
                <fullName>Webmøde</fullName>
            </value>
            <value>
                <fullName>Singlemøde</fullName>
            </value>
            <value>
                <fullName>Udskudt møde</fullName>
            </value>
            <value>
                <fullName>Fysisk Møde</fullName>
            </value>
            <value>
                <fullName>Intro givet</fullName>
            </value>
            <value>
                <fullName>Internal Meeting Booking</fullName>
            </value>
            <value>
                <fullName>Tilbud sendt</fullName>
            </value>
            <value>
                <fullName>journal_udfyldt_afventer_betaling</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>