force-app/main/default/objects/Appointment__c/fields/Rescheduled__c.field-meta.xml
<CustomField>
    <fullName>Rescheduled__c</fullName>
    <formula>AND(
    DATEVALUE(CreatedDate) = TODAY(),
 LastModifiedDate &gt; CreatedDate
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Rescheduled</label>
    <type>Checkbox</type>
</CustomField>