force-app/main/default/objects/Appointment__c/fields/Scheduled_Today__c.field-meta.xml
<CustomField>
    <fullName>Scheduled_Today__c</fullName>
    <description>Returns 1 if Appointment was scheduled for Today</description>
    <formula>IF(DATEVALUE(Start__c) = TODAY(), 0, 1)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Scheduled Today</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>