force-app/main/default/objects/Appointment__c/fields/SMS_reminder__c.field-meta.xml
<CustomField>
    <fullName>SMS_reminder__c</fullName>
    <defaultValue>false</defaultValue>
    <label>SMS reminder</label>
    <type>Checkbox</type>
</CustomField>