force-app/main/default/objects/Appointment__c/fields/SMS_Reminder_New__c.field-meta.xml
<CustomField>
    <fullName>SMS_Reminder_New__c</fullName>
    <label>SMS Reminder (New)</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>No</fullName>
            </value>
            <value>
                <fullName>Yes</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>