force-app/main/default/objects/Appointment__c/fields/Type__c.field-meta.xml
<CustomField>
    <fullName>Type__c</fullName>
    <label>Type</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Ny Journal</fullName>
            </value>
            <value>
                <fullName>Udarbejdelse</fullName>
            </value>
            <value>
                <fullName>Gennemgang</fullName>
            </value>
            <value>
                <fullName>Tinglysning</fullName>
            </value>
            <value>
                <fullName>Servicekald</fullName>
            </value>
            <value>
                <fullName>Callback</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>