force-app/main/default/objects/Appointment__c/fields/User_Role__c.field-meta.xml
<CustomField>
    <fullName>User_Role__c</fullName>
    <formula>TEXT(Assigned_To__r.User_Role__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>User Role</label>
    <type>Text</type>
</CustomField>