force-app/main/default/objects/Appointment__c/fields/UTM_Medium__c.field-meta.xml
<CustomField>
    <fullName>UTM_Medium__c</fullName>
    <label>UTM Medium</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Totalliv</fullName>
            </value>
            <value>
                <fullName>Leadad</fullName>
            </value>
            <value>
                <fullName>Seren</fullName>
            </value>
            <value>
                <fullName>Andet</fullName>
            </value>
            <value>
                <fullName>Billetto</fullName>
            </value>
            <value>
                <fullName>Popermo</fullName>
            </value>
            <value>
                <fullName>Facebook</fullName>
            </value>
            <value>
                <fullName>Meet the Team</fullName>
            </value>
            <value>
                <fullName>Findforsikring.dk</fullName>
            </value>
            <value>
                <fullName>Website Form</fullName>
            </value>
            <value>
                <fullName>Outgrow</fullName>
            </value>
            <value>
                <fullName>eGentic/Premio</fullName>
            </value>
            <value>
                <fullName>Cube</fullName>
            </value>
            <value>
                <fullName>Kundkontakter</fullName>
            </value>
            <value>
                <fullName>PR Leads</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>