force-app/main/default/objects/Appointment__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>CREATED_DATE</columns>
    <columns>NAME</columns>
    <columns>Event_Deleted__c</columns>
    <columns>Calendly_Created__c</columns>
    <columns>Appointment_Completed__c</columns>
    <columns>Assigned_To__c</columns>
    <columns>CREATEDBY_USER</columns>
    <columns>Start__c</columns>
    <columns>End__c</columns>
    <columns>Lead__c</columns>
    <columns>Event__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>CREATED_DATE</field>
        <operation>greaterThan</operation>
        <value>3/1/2025 12:00 AM</value>
    </filters>
    <label>All</label>
</ListView>