force-app/main/default/objects/Appointment__c/listViews/All_Remaining_Events_Today.listView-meta.xml
<ListView>
    <fullName>All_Remaining_Events_Today</fullName>
    <columns>CREATED_DATE</columns>
    <columns>NAME</columns>
    <columns>Appointment_Completed__c</columns>
    <columns>Assigned_To__c</columns>
    <columns>Start__c</columns>
    <columns>End__c</columns>
    <columns>Lead__c</columns>
    <columns>Type__c</columns>
    <columns>Description__c</columns>
    <columns>Event__c</columns>
    <columns>CURRENCY_ISO_CODE</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Start__c</field>
        <operation>equals</operation>
        <value>TODAY</value>
    </filters>
    <filters>
        <field>NAME</field>
        <operation>notContain</operation>
        <value>Ring igen</value>
    </filters>
    <filters>
        <field>Appointment_Completed__c</field>
        <operation>equals</operation>
        <value>0</value>
    </filters>
    <label>All Remaining Events Today</label>
</ListView>