force-app/main/default/objects/Appointment__c/listViews/Appointments_Today.listView-meta.xml
<ListView>
    <fullName>Appointments_Today</fullName>
    <columns>NAME</columns>
    <columns>Assigned_To__c</columns>
    <columns>Start__c</columns>
    <columns>Lead__c</columns>
    <columns>Event__c</columns>
    <columns>Rating__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Start__c</field>
        <operation>equals</operation>
        <value>TODAY</value>
    </filters>
    <label>Appointments Today</label>
</ListView>