force-app/main/default/objects/Appointment__c/listViews/My_Appointments.listView-meta.xml
<ListView>
    <fullName>My_Appointments</fullName>
    <columns>CREATED_DATE</columns>
    <columns>NAME</columns>
    <columns>Calendly_Created__c</columns>
    <columns>Appointment_Completed__c</columns>
    <columns>Assigned_To__c</columns>
    <columns>CREATEDBY_USER</columns>
    <columns>Start__c</columns>
    <columns>End__c</columns>
    <columns>Lead__c</columns>
    <columns>Event__c</columns>
    <filterScope>Mine</filterScope>
    <label>My Appointments</label>
</ListView>